# mycommandmcp

./: .gitignore  .goreleaser.yml  .kvagerc  CONTENT_TYPES.md  Cargo.toml  Dockerfile  MCP_RESOURCE_FIXES.md  Makefile  README.md  RELEASE_GUIDE.md  TROUBLESHOOTING.md  USAGE.md  build-windows.sh  configure-target.sh  create-release.sh  demo.sh  mycommand-tools-extended.yaml  mycommand-tools-with-urls.yaml  mycommand-tools.yaml  release-local.sh  setup-cross-compilation.sh  simple_test.sh  test_code_review.md  test_content_types.sh  test_input_example.yaml  test_mcp.sh  test_mcp_interactive.sh  test_server.sh
.ai/: mycommand-mcp.yaml
.ai/hooks/: kilocode-symbolic-links.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/chatmodes/: compilation-and-log-fixer.chatmode.md
.github/workflows/: release.yml
.kilocode/: mcp.json
.serena/: project.yml
src/: cli_parser.rs  logging.rs  main.rs  mcp_server.rs  test_rmcp.rs  test_sdk.rs
tests/: manual_test.sh  test_accept_input.sh  test_default_args.sh  test_external_configs.sh  test_prompt_loading.sh
