[package]
edition = "2021"
name = "mycommandmcp"
version = "0.8.2"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4.41"
clap = {version = "4.0", features = ["derive"]}
dirs = "5.0"
mime_guess = "2.0.5"
reqwest = {version = "0.11", features = ["stream", "blocking"]}
rust-mcp-sdk = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
tokio = {version = "1.0", features = ["full"]}
